--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,14 +18,11 @@ services:
 
   db-admin:
     container_name: milan-gtfs-db-admin
-    image: dpage/pgadmin4
+    image: adminer
     depends_on:
     - db
     ports:
-      - 3000:80
-    environment:
-      PGADMIN_DEFAULT_EMAIL: 'admin'
-      PGADMIN_DEFAULT_PASSWORD: 'admin'
+      - 8080:8080
 
 volumes:
   db_data: {}
